--- a/src/main/resources/templates/facturacion/crear_factura.html
+++ b/src/main/resources/templates/facturacion/crear_factura.html
@@ -241,7 +241,7 @@
                             var row = '<tr>' +
                                 '<td class="align-middle" data-id="' + producto.id_producto + '">' +
                                 '<div class="d-flex align-items-center">' +
-                                '<img src="http://localhost:8080' + producto.icono + '" alt="Icono del Producto" class="img-fluid me-2" style="width: 40px; height: 40px;">' +
+                                '<img src="http://34.74.207.191:8080/Factx-Backend' + producto.icono + '" alt="Icono del Producto" class="img-fluid me-2" style="width: 40px; height: 40px;">' +
                                 '<div>' +
                                 '<div>' + producto.producto + '</div>' +
                                 '<small class="text-muted">' + producto.categoria.categoria + '</small>' +
