--- a/src/main/resources/templates/inventario/editar_producto.html
+++ b/src/main/resources/templates/inventario/editar_producto.html
@@ -67,7 +67,9 @@
 
                     <div class="mb-3">
                         <label class="form-label">Icono actual:</label>
-                        <img th:src="@{'http://localhost:8080' + ${producto.icono}}" alt="Imagen del Producto"
+                        <!-- <img th:src="@{'http://localhost:8080' + ${producto.icono}}" alt="Imagen del Producto"
+                            class="img-fluid" style="width: 100px; height: 100px;"><br> -->
+                        <img th:src="@{'http://34.74.207.191:8081' + ${producto.icono}}" alt="Imagen del Producto"
                             class="img-fluid" style="width: 100px; height: 100px;"><br>
 
 
